--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^1.8.3",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
